Tidyup for the tablet build with Jenson

--- a/tex/paper-titles.tex
+++ b/tex/paper-titles.tex
@@ -40,10 +40,10 @@
 \upapertitle{22}{The Trinitized Sons of God}{Mighty Messenger}{p22}
 \upapertitle{23}{The Solitary Messengers}{Divine Counsellor}{p23}
 \upapertitle{24}{Higher Personalities of the Infinite Spirit}{Divine Counsellor}{p24}
-\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{25}{The Messenger Hosts of Space}{One High in Authority}{p25}
 \tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{26}{Ministering Spirits of the Central Universe}{Perfector of Wisdom}{p26}
+\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{27}{Ministry of the Primary Supernaphim}{Perfector of Wisdom}{p27}
 \upapertitle{28}{Ministering Spirits of the Superuniverses}{Mighty Messenger}{p28}
@@ -73,11 +73,11 @@
 \upapertitle{46}{The Local System Headquarters}{Archangel}{p46}
 \upapertitle{47}{The Seven Mansion Worlds}{Brilliant Evening Star}{p47}
 \upapertitle{48}{The Morontia Life}{Archangel}{p48}
-\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{49}{The Inhabited Worlds}{Melchizedek}{p49}
 \upapertitle{50}{The Planetary Princes}{Secondary Lanonandek}{p50}
 \upapertitle{51}{The Planetary Adams}{Secondary Lanonandek}{p51}
 \upapertitle{52}{Planetary Mortal Epochs}{Mighty Messenger}{p52}
+\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{53}{The Lucifer Rebellion}{Manovandet Melchizedek}{p53}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
@@ -107,7 +107,6 @@
 \upapertitle{71}{Development of the State}{Melchizedek}{p71}
 \upapertitle{72}{Government on a Neighbouring Planet}{Melchizedek}{p72}
 \upapertitle{73}{The Garden of Eden}{Solonia}{p73}
-\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \tunemarkup{pgkobomini}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{74}{Adam and Eve}{Solonia}{p74}
 \upapertitle{75}{The Default of Adam and Eve}{Solonia}{p75}
@@ -116,6 +115,7 @@
 \tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{78}{The Violet Race after the Days of Adam}{Archangel}{p78}
 \upapertitle{79}{Andite Expansion in the Orient}{Archangel}{p79}
+\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{80}{Andite Expansion in the Occident}{Archangel}{p80}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
@@ -148,7 +148,6 @@
 \tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{100}{Religion in Human Experience}{Melchizedek}{p100}
 \upapertitle{101}{The Real Nature of Religion}{Melchizedek}{p101}
-\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{102}{The Foundations of Religious Faith}{Melchizedek}{p102}
 \upapertitle{103}{The Reality of Religious Experience}{Melchizedek}{p103}
 \upapertitle{104}{Growth of the Trinity Concept}{Melchizedek}{p104}
@@ -160,6 +159,7 @@
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{109}{Relation of Adjusters to Universe Creatures}{Solitary Messenger}{p109}
 \tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{110}{Relation of Adjusters to Individual Mortals}{Solitary Messenger}{p110}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{111}{The Adjuster and the Soul}{Solitary Messenger}{p111}
@@ -183,7 +183,6 @@
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{125}{Jesus at Jerusalem}{Midwayer Commission}{p125}
 \upapertitle{126}{The Two Crucial Years}{Midwayer Commission}{p126}
-\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{127}{The Adolescent Years}{Midwayer Commission}{p127}
 \ifmultivol\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{128}{Jesus’ Early Manhood}{Midwayer Commission}{p128}
@@ -198,6 +197,7 @@
 \upapertitle{134}{The Transition Years}{Midwayer Commission}{p134}
 \upapertitle{135}{John the Baptist}{Midwayer Commission}{p135}
 \upapertitle{136}{Baptism and the Forty Days}{Midwayer Commission}{p136}
+\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{137}{Tarrying Time in Galilee}{Midwayer Commission}{p137}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
@@ -221,7 +221,6 @@
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{153}{The Crisis at Capernaum}{Midwayer Commission}{p153}
 \upapertitle{154}{Last Days at Capernaum}{Midwayer Commission}{p154}
-\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \tunemarkup{pgkobomini}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{155}{Fleeing Through Northern Galilee}{Midwayer Commission}{p155}
 \upapertitle{156}{The Sojourn at Tyre and Sidon}{Midwayer Commission}{p156}
@@ -239,6 +238,7 @@
 \upapertitle{165}{The Perean Mission Begins}{Midwayer Commission}{p165}
 \upapertitle{166}{Last Visit to Northern Perea}{Midwayer Commission}{p166}
 \tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{167}{The Visit to Philadelphia}{Midwayer Commission}{p167}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{168}{The Resurrection of Lazarus}{Midwayer Commission}{p168}
@@ -259,7 +259,6 @@
 \upapertitle{180}{The Farewell Discourse}{Midwayer Commission}{p180}
 \upapertitle{181}{Final Admonitions and Warnings}{Midwayer Commission}{p181}
 \upapertitle{182}{In Gethsemane}{Midwayer Commission}{p182}
-\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{183}{The Betrayal and Arrest of Jesus}{Midwayer Commission}{p183}
 \upapertitle{184}{Before the Sanhedrin Court}{Midwayer Commission}{p184}
 \tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
@@ -277,4 +276,5 @@
 \upapertitle{195}{After Pentecost}{Midwayer Commission}{p195}
 \upapertitle{196}{The Faith of Jesus}{Midwayer Commission}{p196}
 \fi
+\vspace*{-8ex}%
 \end{center}
