Disable Index for now

--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -298,7 +298,7 @@
   \clp\fancyhead[C]{\bibheadfont LIST OF FIGURES}\bibpdfbookmark{LIST OF FIGURES}{fig}%
   \listoffigures
 \fi
-\clp\fancyhead[C]{\bibheadfont TOPICAL INDEX}\bibpdfbookmark[0]{Topical Index}{Idx}
-\printindex
+%\clp\fancyhead[C]{\bibheadfont TOPICAL INDEX}\bibpdfbookmark[0]{Topical Index}{Idx}
+%\printindex
 }
 \end{document}
