Enable cover image and Bible.

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -50,13 +50,13 @@
 %\tunemarkuptag{fancylettrine}
 
 % comment out to disable cover image
-%\tunemarkuptag{coverimage}
+\tunemarkuptag{coverimage}
 
 % comment out to enable Cosmic Citizenship Quiz
-\tunemarkuptag{noquiz}
+%\tunemarkuptag{noquiz}
 
 % comment out to not include the Bible text
-%\tunemarkuptag{bible}
+\tunemarkuptag{bible}
 
 % uncomment to disable Bibliographies
 %\tunemarkuptag{nobiblio}
