Remove the no longer needed attempt at indexing

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -93,7 +93,7 @@
 \vs p041 9:4 Sun stability is wholly dependent on the equilibrium between gravity\hyp{}heat contention --- tremendous pressures counterbalanced by unimagined temperatures. The interior gas elasticity of the suns upholds the overlying layers of varied materials, and when gravity and heat are in equilibrium, the weight of the outer materials exactly equals the temperature pressure of the underlying and interior gases. In many of the younger stars continued gravity condensation produces ever\hyp{}heightening internal temperatures, and as internal heat increases, the interior X\hyp{}ray pressure of supergas winds becomes so great that, in connection with the centrifugal motion, a sun begins to throw its exterior layers off into space, thus redressing the imbalance between gravity and heat.
 \vs p041 9:5 Your own sun has long since attained relative equilibrium between its expansion and contraction cycles, those disturbances which produce the gigantic pulsations of many of the younger stars. Your sun is now passing out of its six billionth year. At the present time it is functioning through the period of greatest economy. It will shine on as of present efficiency for more than $2.5 \times 10^{10}$ years. It will probably experience a partially efficient period of decline as long as the combined periods of its youth and stabilized function.
 \usection{Origin of Inhabited Worlds}
-\vs p041 10:1 Some of the variable stars, in or near the state of maximum pulsation, are in process of giving origin to subsidiary systems, many of which will eventually be much like your own sun and its revolving planets. Your sun was in just such a state of mighty pulsation when the massive Angona system swung into near approach, and the outer surface of the sun began to erupt veritable streams --- continuous sheets --- of matter. This kept up with ever\hyp{}increasing violence until nearest apposition, when the limits of solar cohesion were reached and a vast pinnacle of matter, the ancestor of the solar system, was disgorged. In similar circumstances the closest approach of the attracting body sometimes draws off whole planets, even a quarter or third of a sun. These major extrusions form certain peculiar cloud\hyp{}bound types of worlds, spheres much like Jupiter\index{Planets!Jupiter} and Saturn\index{Planets!Saturn}.
+\vs p041 10:1 Some of the variable stars, in or near the state of maximum pulsation, are in process of giving origin to subsidiary systems, many of which will eventually be much like your own sun and its revolving planets. Your sun was in just such a state of mighty pulsation when the massive Angona system swung into near approach, and the outer surface of the sun began to erupt veritable streams --- continuous sheets --- of matter. This kept up with ever\hyp{}increasing violence until nearest apposition, when the limits of solar cohesion were reached and a vast pinnacle of matter, the ancestor of the solar system, was disgorged. In similar circumstances the closest approach of the attracting body sometimes draws off whole planets, even a quarter or third of a sun. These major extrusions form certain peculiar cloud\hyp{}bound types of worlds, spheres much like Jupiter and Saturn.
 \vs p041 10:2 The majority of solar systems, however, had an origin entirely different from yours, and this is true even of those which were produced by gravity\hyp{}tidal technique. But no matter what technique of world building obtains, gravity always produces the solar system type of creation; that is, a central sun or dark island with planets, satellites, subsatellites, and meteors.
 \vs p041 10:3 \pc The physical aspects of the individual worlds are largely determined by mode of origin, astronomical situation, and physical environment. Age, size, rate of revolution, and velocity through space are also determining factors. Both the gas\hyp{}contraction and the solid\hyp{}accretion worlds are characterized by mountains and, during their earlier life, when not too small, by water and air. The molten\hyp{}split and collisional worlds are sometimes without extensive mountain ranges.
 \vs p041 10:4 During the earlier ages of all these new worlds, earthquakes are frequent, and they are all characterized by great physical disturbances; especially is this true of the gas\hyp{}contraction spheres, the worlds born of the immense nebular rings which are left behind in the wake of the early condensation and contraction of certain individual suns. Planets having a dual origin like Urantia pass through a less violent and stormy youthful career. Even so, your world experienced an early phase of mighty upheavals, characterized by volcanoes, earthquakes, floods, and terrific storms.
