--- a/tex/p000.tex
+++ b/tex/p000.tex
@@ -12,7 +12,7 @@
 \uminitoc{The Three Absolutes}
 \uminitoc{The Trinities}
 \author{Divine Counsellor}
-\vs p000 0:1 In the minds of the mortals of Urantia\index{Planets!Urantia|textbf}\fnst{Pronounced \textit{oor\'anteeya}, may be a coined word from the Greek \textgreek{οὐρανός} ``heavens'' and the Latin suffix \textit{-tia}, signifying ``[y]our place in the heavens''.} --- that being the name of your world --- there exists great confusion respecting the meaning of such terms as God, divinity, and deity. Human beings are still more confused and uncertain about the relationships of the divine personalities designated by these numerous appellations. Because of this conceptual poverty associated with so much ideational confusion, I have been directed to formulate this introductory statement in explanation of the meanings which should be attached to certain word symbols as they may be hereinafter used in those papers which the Orvonton corps of truth revealers have been authorized\fnst{Only the papers 1--31 (i.e. Part I) were authorized at the superuniverse level. The papers 32--196 (Parts II, III and IV) were revealed under the local universe and system level authorization.} to translate into the English language\fnst{The reason why English was used for this Revelation is obvious: it is the mother tongue of the majority of those people, whose thoughts and books served as the basis of it, namely: Dr~William~S. Sadler, Sir~Arthur~S.\,Eddington, Sir~James Jeans and many others. One of the greatest spiritual teachers on Urantia --- Lev Nikolaevich Tolstoy --- has given to Russian speakers a reasonably accurate restatement of Jesus' teachings. His Complete Works have been printed in Stalin's USSR, beginning in 1935. See, for example, the volumes 23--25, 41--45 of the 90-volume set. On p.~315 of ``The Physiology of Faith and Fear'' Dr~William S.~Sadler writes: Tolstoi once called faith ``the force of life.''} of Urantia.
+\vs p000 0:1 In the minds of the mortals of Urantia\fnst{Pronounced \textit{oor\'anteeya}, may be a coined word from the Greek \textgreek{οὐρανός} ``heavens'' and the Latin suffix \textit{-tia}, signifying ``[y]our place in the heavens''.} --- that being the name of your world --- there exists great confusion respecting the meaning of such terms as God, divinity, and deity. Human beings are still more confused and uncertain about the relationships of the divine personalities designated by these numerous appellations. Because of this conceptual poverty associated with so much ideational confusion, I have been directed to formulate this introductory statement in explanation of the meanings which should be attached to certain word symbols as they may be hereinafter used in those papers which the Orvonton corps of truth revealers have been authorized\fnst{Only the papers 1--31 (i.e. Part I) were authorized at the superuniverse level. The papers 32--196 (Parts II, III and IV) were revealed under the local universe and system level authorization.} to translate into the English language\fnst{The reason why English was used for this Revelation is obvious: it is the mother tongue of the majority of those people, whose thoughts and books served as the basis of it, namely: Dr~William~S. Sadler, Sir~Arthur~S.\,Eddington, Sir~James Jeans and many others. One of the greatest spiritual teachers on Urantia --- Lev Nikolaevich Tolstoy --- has given to Russian speakers a reasonably accurate restatement of Jesus' teachings. His Complete Works have been printed in Stalin's USSR, beginning in 1935. See, for example, the volumes 23--25, 41--45 of the 90-volume set. On p.~315 of ``The Physiology of Faith and Fear'' Dr~William S.~Sadler writes: Tolstoi once called faith ``the force of life.''} of Urantia.
 \vs p000 0:2 It is exceedingly difficult to present enlarged concepts and advanced truth, in our endeavour to expand cosmic consciousness and enhance spiritual perception, when we are restricted to the use of a circumscribed language of the realm. But our mandate admonishes us to make every effort to convey our meanings by using the word symbols of the English tongue. We have been instructed to introduce new terms only when the concept to be portrayed finds no terminology in English which can be employed to convey such a new concept partially or even with more or less distortion of meaning.
 \vs p000 0:3 In the hope of facilitating comprehension and of preventing confusion on the part of every mortal who may peruse these papers, we deem it wise to present in this initial statement an outline of the meanings to be attached to numerous English words which are to be employed in designation of Deity and certain associated concepts of the things, meanings, and values of universal reality.
 \vs p000 0:4 But in order to formulate this Foreword of definitions and limitations of terminology, it is necessary to anticipate the usage of these terms in the subsequent presentations. This Foreword is not, therefore, a finished statement within itself;\fnst{Why \bibemph{exactly} does the need to anticipate the usage of terms make this Foreword an unfinished statement? I could not answer this question until I remembered the difficulty encountered when studying the ancient Hebrew poetry. Not prose, but \bibemph{poetry}. Namely, the paucity of language makes the reading of poetry orders of magnitude more complex than prose. The fundamental fact is that the true meaning of any word is not the paragraph or two found in its dictionary definition, but rather the entire usage thereof in the whole body of literature, everywhere it is encountered. Hebrew poetry provides a clear and relatively compact illustration of this, because to \bibemph{really} understand one verse you often need to re-read many times the entire body of literature (i.e. all three books of Hebrew poetry: Psalms, Proverbs and Job) and this is what makes reading poetry hundreds, if not thousands, times harder than prose. Likewise, here the paucity of English language makes the mere ``dictionary definitions'' incomplete, unfinished and they must be supplemented by the entire ``body of literature'', i.e. the 31 subsequent presentations where each of these definitions is encountered. Therefore, the terms defined here might still have different meanings later on and this is what makes this Foreword an unfinished statement, i.e. it cannot be ``finished'' without the entirety of all the contexts where all the terms are used.} it is only a definitive guide designed to assist those who shall read the accompanying papers dealing with Deity and the universe of universes\fnst{As already noted at \bibref[0:0.1]{p000 0:1} these are limited to papers 1--31 only. Therefore, this Foreword is properly ``the Foreword to Part I of the Urantia Papers'' and that is where it should be printed. Curiously, this is where the Foreword is found in ``The Titles of the Papers'' and ``Contents of the Book'' as printed in the original 1955 edition, although the text of the Foreword is printed just before the Part I title page preceding Paper 1 of that edition.} which have been formulated by an Orvonton commission sent to Urantia for this purpose.
@@ -20,7 +20,7 @@
 \vs p000 0:6 The seven evolving superuniverses in association with the central and divine universe, we commonly refer to as the \bibemph{grand universe;} these are the now organized and inhabited creations. They are all a part of the \bibemph{master universe,} which also embraces the uninhabited but mobilizing universes of outer space.
 \usection{Deity and Divinity}
 \vs p000 1:1 The universe of universes presents phenomena of deity\fnst{In the lower case to reflect a certain degree of \bibemph{ambiguity} in associating observed universe phenomena with the activity of Deity. This sentence prepares the \bibemph{empirical soil} for the definition of Deity, which commences in the next paragraph.} activities on diverse levels of cosmic realities, mind meanings, and spirit values, but all of these ministrations --- personal or otherwise --- are divinely co\hyp{}ordinated.
-\vs p000 1:2 \pc DEITY\index{Deity, as a word symbol!Terminology}\fnst{In all capitals to reflect the \bibemph{over-exactness} of this description which compensates for the ambiguity in the previous paragraph. Without resorting to such a combination of ambiguity and over-exactness it would probably be well\hyp{}nigh impossible to formulate a definition of Deity, which is both comprehensible by a mortal mind and free of the circular reasoning involved in the conceptual pair \{Deity $\leftrightarrow$ divinity\}.} is personalizable as God, is prepersonal and superpersonal in ways not altogether comprehensible by man. Deity is characterized by the quality of unity --- actual or potential --- on all supermaterial levels of reality; and this unifying quality is best comprehended by creatures as divinity.
+\vs p000 1:2 \pc DEITY\fnst{In all capitals to reflect the \bibemph{over-exactness} of this description which compensates for the ambiguity in the previous paragraph. Without resorting to such a combination of ambiguity and over-exactness it would probably be well\hyp{}nigh impossible to formulate a definition of Deity, which is both comprehensible by a mortal mind and free of the circular reasoning involved in the conceptual pair \{Deity $\leftrightarrow$ divinity\}.} is personalizable as God, is prepersonal and superpersonal in ways not altogether comprehensible by man. Deity is characterized by the quality of unity --- actual or potential --- on all supermaterial levels of reality; and this unifying quality is best comprehended by creatures as divinity.
 \vs p000 1:3 \pc Deity functions on personal, prepersonal, and superpersonal levels. Total Deity is functional on the following seven levels:
 \vs p000 1:4 \ublistelem{1.}\bibnobreakspace \bibemph{Static ---} self\hyp{}contained and self\hyp{}existent Deity.
 \vs p000 1:5 \ublistelem{2.}\bibnobreakspace \bibemph{Potential ---} self\hyp{}willed and self\hyp{}purposive Deity.
@@ -51,12 +51,12 @@
 \vs p000 2:3 \ublistelem{1.}\bibnobreakspace \bibemph{Prepersonal ---} as in the ministry of the Father fragments, such as the Thought Adjusters.
 \vs p000 2:4 \ublistelem{2.}\bibnobreakspace \bibemph{Personal ---} as in the evolutionary experience of created and procreated beings.
 \vs p000 2:5 \ublistelem{3.}\bibnobreakspace \bibemph{Superpersonal ---} as in the eventuated existences of certain absonite and associated beings.
-\vs p000 2:6 GOD\index{God, as a word symbol!Terminology} is a word symbol designating all personalizations of Deity. The term requires a different definition on each personal level of Deity function and must be still further redefined within each of these levels, as this term may be used to designate the diverse co\hyp{}ordinate and subordinate personalizations of Deity; for example: the Paradise Creator Sons --- the local universe fathers.
+\vs p000 2:6 GOD is a word symbol designating all personalizations of Deity. The term requires a different definition on each personal level of Deity function and must be still further redefined within each of these levels, as this term may be used to designate the diverse co\hyp{}ordinate and subordinate personalizations of Deity; for example: the Paradise Creator Sons --- the local universe fathers.
 \vs p000 2:7 \pc The term God, as we make use of it, may be understood:
 \vs p000 2:8 \bibemph{By designation ---} as God the Father.
 \vs p000 2:9 \bibemph{By context ---} as when used in the discussion of some one deity level or association. When in doubt as to the exact interpretation of the word God, it would be advisable to refer it to the person of the Universal Father.
 \vs p000 2:10 \pc The term God always denotes \bibemph{personality.} Deity may, or may not, refer to divinity personalities.
-\vs p000 2:11 \pc The word GOD\index{God, as a word symbol!Terminology} is used, in these papers, with the following meanings:
+\vs p000 2:11 \pc The word GOD is used, in these papers, with the following meanings:
 \vs p000 2:12 \ublistelem{1.}\bibnobreakspace \bibemph{God the Father ---} Creator, Controller, and Upholder. The Universal Father, the First Person of Deity.
 \vs p000 2:13 \ublistelem{2.}\bibnobreakspace \bibemph{God the Son ---} Co\hyp{}ordinate Creator, Spirit Controller, and Spiritual Administrator. The Eternal Son, the Second Person of Deity.
 \vs p000 2:14 \ublistelem{3.}\bibnobreakspace \bibemph{God the Spirit ---} Conjoint Actor, Universal Integrator, and Mind Bestower. The Infinite Spirit, the Third Person of Deity.
