Make \bibref usage more consistent

--- a/tex/p179.tex
+++ b/tex/p179.tex
@@ -52,6 +52,6 @@
 \vs p179 5:6 This supper of remembrance, when it is partaken of by those who are Son\hyp{}believing and God\hyp{}knowing, does not need to have associated with its symbolism any of man’s puerile misinterpretations regarding the meaning of the divine presence, for upon all such occasions the Master is \bibemph{really present.} The remembrance supper is the believer’s symbolic rendezvous with Michael. When you become thus spirit\hyp{}conscious, the Son is actually present, and his spirit fraternizes with the indwelling fragment of his Father.
 \vs p179 5:7 \pc After they had engaged in meditation for a few moments, Jesus continued speaking: \textcolour{ubdarkred}{“When you do these things, recall the life I have lived on earth among you and rejoice that I am to continue to live on earth with you and to serve through you. As individuals, contend not among yourselves as to who shall be greatest. Be you all as brethren. And when the kingdom grows to embrace large groups of believers, likewise should you refrain from contending for greatness or seeking preferment between such groups.”}
 \vs p179 5:8 And this mighty occasion took place in the upper chamber of a friend. There was nothing of sacred form or of ceremonial consecration about either the supper or the building. The remembrance supper was established without ecclesiastical sanction.
-\vs p179 5:9 When Jesus had thus established the supper of the remembrance, he said to the 11\fnst{In 1955 text ``twelve''. There were only eleven apostles still present for the establishment of the remembrance supper because Judas had left earlier; so the “twelve” of the 1955 text was incorrect, and was changed to “apostles” to make this sentence consistent with the rest of the narrative. However, if the manuscript had read “apostles” it could not have become “twelve” in the course of text preparation, therefore a different solution was required. The committee adopted “eleven” as the resolution of this problem based on the proposition that the manuscript contained numerals at this point --- as written documents commonly do --- thus “11.” At some point prior to formatting for printing, the last digit was changed either by accident or through the common typographical error of seeing what you expect to see rather than what is on the page. When the number was formatted for printing, the “12” which was so similar to “11” became “twelve” which is completely dissimilar to “eleven.” [Note that there are several other examples of errors in the 1955 text that apparently had a similar origin: see \bibref[37:8.3]{p037 8:3}, \bibref[41:4.4]{p041 4:4} and \bibref[43:1.6]{p043 1:6}; the several time statements that are formatted incorrectly --- \bibref[134:3.3.1-3]{p134 3:1} and \bibref[177:4.1]{p177 4:1} also lend weight to the idea that numbers were written as numerals in the manuscript (as is common practice), and were formatted to words later in the process of text preparation.]}: “And as often as you do this, do it in remembrance of me. And when you do remember me, first look back upon my life in the flesh, recall that I was once with you, and then, by faith, discern that you shall all sometime sup with me in the Father’s eternal kingdom. This is the new Passover which I leave with you, even the memory of my bestowal life, the word of eternal truth; and of my love for you, the outpouring of my Spirit of Truth upon all flesh.”
+\vs p179 5:9 When Jesus had thus established the supper of the remembrance, he said to the 11\fnst{In 1955 text ``twelve''. There were only eleven apostles still present for the establishment of the remembrance supper because Judas had left earlier; so the “twelve” of the 1955 text was incorrect, and was changed to “apostles” to make this sentence consistent with the rest of the narrative. However, if the manuscript had read “apostles” it could not have become “twelve” in the course of text preparation, therefore a different solution was required. The committee adopted “eleven” as the resolution of this problem based on the proposition that the manuscript contained numerals at this point --- as written documents commonly do --- thus “11.” At some point prior to formatting for printing, the last digit was changed either by accident or through the common typographical error of seeing what you expect to see rather than what is on the page. When the number was formatted for printing, the “12” which was so similar to “11” became “twelve” which is completely dissimilar to “eleven.” [Note that there are several other examples of errors in the 1955 text that apparently had a similar origin: see \bibref[37:8.3]{p037 8:3}, \bibref[41:4.4]{p041 4:4} and \bibref[43:1.6]{p043 1:6}; the several time statements that are formatted incorrectly --- \bibref[134:3.1]{p134 3:1} and \bibref[177:4.1]{p177 4:1} also lend weight to the idea that numbers were written as numerals in the manuscript (as is common practice), and were formatted to words later in the process of text preparation.]}: “And as often as you do this, do it in remembrance of me. And when you do remember me, first look back upon my life in the flesh, recall that I was once with you, and then, by faith, discern that you shall all sometime sup with me in the Father’s eternal kingdom. This is the new Passover which I leave with you, even the memory of my bestowal life, the word of eternal truth; and of my love for you, the outpouring of my Spirit of Truth upon all flesh.”
 \vs p179 5:10 And they ended this celebration of the old but bloodless Passover in connection with the inauguration of the new supper of the remembrance, by singing, all together, the 118\ts{th} Psalm.
 \quizlink
