--- a/tex/p012.tex
+++ b/tex/p012.tex
@@ -143,7 +143,7 @@ Robert H. Baker, Ph.D.
 \bibitem{Strong1}
 Rev.~Josiah Strong, D.D.
 {<<The New World\hyp{}Religion.>>}
-{\em Garden City, New York: Doubleday, Page \& Company}, 1915.
+{\em Garden City, New York: Doubleday, Page \&\ Company}, 1915.
 \bibitem{Overstreet1}
 H.A. Overstreet
 {<<The Enduring Quest: A Search for a Philosophy of Life>>.}
