Fix punctuation on the boundary of double quote

--- a/tex/p001.tex
+++ b/tex/p001.tex
@@ -90,15 +90,15 @@
 \begin{thebibliography}{100}
 \bibitem{Knudson1}
 Albert C. Knudson.
-{<<The Doctrine of God>>.}
+{``The Doctrine of God.''}
 {\em New York: Abingdon-Cokesbury Press}, 1930.
 \bibitem{Matthews1}
 W.R. Matthews, K.C.V.O., D.D., D.Lit.
-{<<God in Christian Thought and Experience>>.}
+{``God in Christian Thought and Experience.''}
 {\em London: Nisbet \&\ Co. Ltd.}, 1930.
 \bibitem{Illingworth1}
 J.R. Illingworth, M.A.
-{<<Personality Human and Divine>>.}
+{``Personality Human and Divine.''}
 {\em London and New York: The Macmillan Company}, 1894.
 \end{thebibliography}
 }
