--- a/tex/p004.tex
+++ b/tex/p004.tex
@@ -63,11 +63,11 @@
 \begin{thebibliography}{100}
 \bibitem{Knudson1}
 Albert C. Knudson.
-{<<The Doctrine of God>>.}
+{``The Doctrine of God.''}
 {\em New York: Abingdon-Cokesbury Press}, 1930.
 \bibitem{Hocking1}
 William Ernest Hocking.
-{<<The Meaning of God in Human Experience: A Philosophic Study of Religion>>}
+{``The Meaning of God in Human Experience: A Philosophic Study of Religion.''}
 {\em New Haven: Yale University Press}, 1912.
 \end{thebibliography}
 }
