--- a/tex/p005.tex
+++ b/tex/p005.tex
@@ -89,15 +89,15 @@
 \begin{thebibliography}{100}
 \bibitem{Strong1}
 Rev.~Josiah Strong, D.D.
-{<<The New World\hyp{}Religion.>>}
+{``The New World\hyp{}Religion.''}
 {\em Garden City, New York: Doubleday, Page \&\ Company}, 1915.
 \bibitem{Matthews1}
 W. R. Matthews, K.C.V.O., D.D., D.Lit.
-{<<God in Christian Thought and Experience>>.}
+{``God in Christian Thought and Experience.''}
 {\em London: Nisbet \&\ Co. Ltd.}, 1930.
 \bibitem{Illingworth1}
 J.R. Illingworth, M.A.
-{<<Personality Human and Divine>>.}
+{``Personality Human and Divine.''}
 {\em London and New York: The Macmillan Company}, 1894.
 \end{thebibliography}
 }
