--- a/tex/p012.tex
+++ b/tex/p012.tex
@@ -138,19 +138,19 @@
 \begin{thebibliography}{100}
 \bibitem{Baker1}
 Robert H. Baker, Ph.D.
-{<<The Universe Unfolding: A Story of Man's Increasing Comprehension of the Universe Around Him.>>}
+{``The Universe Unfolding: A Story of Man's Increasing Comprehension of the Universe Around Him.''}
 {\em Baltimore: The Williams \&\ Wilkins Company}, 1932.
 \bibitem{Strong1}
 Rev.~Josiah Strong, D.D.
-{<<The New World\hyp{}Religion.>>}
+{``The New World\hyp{}Religion.''}
 {\em Garden City, New York: Doubleday, Page \&\ Company}, 1915.
 \bibitem{Overstreet1}
 H.A. Overstreet
-{<<The Enduring Quest: A Search for a Philosophy of Life>>.}
+{``The Enduring Quest: A Search for a Philosophy of Life.''}
 {\em New York: W. Norton \&\ Company, Inc.}, 1931.
 \bibitem{Eddington1}
 Sir Arthur S.~Eddington.
-{<<Space, Time and Gravitation, An Outline of the General Relativity Theory.>>}
+{``Space, Time and Gravitation, An Outline of the General Relativity Theory.''}
 {\em Cambridge University Press}, 1920.
 \end{thebibliography}
 }
