--- a/tex/p003.tex
+++ b/tex/p003.tex
@@ -86,15 +86,15 @@
 \begin{thebibliography}{100}
 \bibitem{Knudson1}
 Albert C. Knudson.
-{<<The Doctrine of God>>.}
+{``The Doctrine of God.''}
 {\em New York: Abingdon-Cokesbury Press}, 1930.
 \bibitem{Hume1}
 Robert Ernest Hume, M.A., Ph.D.,
-{<<Treasure\hyp{}House of the Living Religions: Selections from Their Sacred Scriptures>>.}
+{``Treasure\hyp{}House of the Living Religions: Selections from Their Sacred Scriptures.''}
 {\em New York: Charles Scribner's Sons}, 1932.
 \bibitem{Lewis1}
 Edwin Lewis
-{<<A Plea for the Reality, Adequacy and Availability of God>>.}
+{``A Plea for the Reality, Adequacy and Availability of God.''}
 {\em New York: The Abingdon Press.}, 1931.
 \end{thebibliography}
 }
