--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -209,15 +209,15 @@
 \begin{thebibliography}{100}
 \bibitem{Eddington1}
 Sir Arthur Stanley Eddington.
-{<<The Nature of the Physical World>>.}
+{``The Nature of the Physical World.''}
 {\em Cambridge, England}, 1929.
 \bibitem{Baker1}
 Robert H. Baker, Ph.D.
-{<<The Universe Unfolding: A Story of Man's Increasing Comprehension of the Universe Around Him.>>}
+{``The Universe Unfolding: A Story of Man's Increasing Comprehension of the Universe Around Him.''}
 {\em Baltimore: The Williams \&\ Wilkins Company}, 1932.
 \bibitem{Barnes1}
 Ernest William Barnes.
-{<<Scientific Theory and Religion: The World described by Science and its Spiritual interpretation>>.}
+{``Scientific Theory and Religion: The World described by Science and its Spiritual interpretation.''}
 {\em Cambridge: At the University Press}, 1933.
 \bibitem{Swann1}
 W.F.G.~Swann.
