Move double quotes inside \ublistelem{...}

--- a/tex/p132.tex
+++ b/tex/p132.tex
@@ -57,16 +57,16 @@
 \usection{Counselling the Rich Man}
 \vs p132 5:1 A certain rich man, a Roman citizen and a Stoic, became greatly interested in Jesus’ teaching, having been introduced by Angamon. After many intimate conferences this wealthy citizen asked Jesus what he would do with wealth if he had it, and Jesus answered him: \textcolour{ubdarkred}{“I would bestow material wealth for the enhancement of material life, even as I would minister knowledge, wisdom, and spiritual service for the enrichment of the intellectual life, the ennoblement of the social life, and the advancement of the spiritual life. I would administer material wealth as a wise and effective trustee of the resources of one generation for the benefit and ennoblement of the next and succeeding generations.”}
 \vs p132 5:2 But the rich man was not fully satisfied with Jesus’ answer. He made bold to ask again: “But what do you think a man in my position should do with his wealth? Should I keep it, or should I give it away?” And when Jesus perceived that he really desired to know more of the truth about his loyalty to God and his duty to men, he further answered: \textcolour{ubdarkred}{“My good friend, I discern that you are a sincere seeker after wisdom and an honest lover of truth; therefore am I minded to lay before you my view of the solution of your problems having to do with the responsibilities of wealth. I do this because you have \bibemph{asked} for my counsel, and in giving you this advice, I am not concerned with the wealth of any other rich man; I am offering advice only to you and for your personal guidance. If you honestly desire to regard your wealth as a trust, if you really wish to become a wise and efficient steward of your accumulated wealth, then would I counsel you to make the following analysis of the sources of your riches: Ask yourself, and do your best to find the honest answer, whence came this wealth? And as a help in the study of the sources of your great fortune, I would suggest that you bear in mind the following ten different methods of amassing material wealth:}
-\vs p132 5:3 \textcolour{ubdarkred}{“\ublistelem{1.}\bibnobreakspace Inherited wealth --- riches derived from parents and other ancestors.}
-\vs p132 5:4 \textcolour{ubdarkred}{“\ublistelem{2.}\bibnobreakspace Discovered wealth --- riches derived from the uncultivated resources of mother earth.}
-\vs p132 5:5 \textcolour{ubdarkred}{“\ublistelem{3.}\bibnobreakspace Trade wealth --- riches obtained as a fair profit in the exchange and barter of material goods.}
-\vs p132 5:6 \textcolour{ubdarkred}{“\ublistelem{4.}\bibnobreakspace Unfair wealth --- riches derived from the unfair exploitation or the enslavement of one’s fellows.}
-\vs p132 5:7 \textcolour{ubdarkred}{“\ublistelem{5.}\bibnobreakspace Interest wealth --- income derived from the fair and just earning possibilities of invested capital.}
-\vs p132 5:8 \textcolour{ubdarkred}{“\ublistelem{6.}\bibnobreakspace Genius wealth --- riches accruing from the rewards of the creative and inventive endowments of the human mind.}
-\vs p132 5:9 \textcolour{ubdarkred}{“\ublistelem{7.}\bibnobreakspace Accidental wealth --- riches derived from the generosity of one’s fellows or taking origin in the circumstances of life.}
-\vs p132 5:10 \textcolour{ubdarkred}{“\ublistelem{8.}\bibnobreakspace Stolen wealth --- riches secured by unfairness, dishonesty, theft, or fraud.}
-\vs p132 5:11 \textcolour{ubdarkred}{“\ublistelem{9.}\bibnobreakspace Trust funds --- wealth lodged in your hands by your fellows for some specific use, now or in the future.}
-\vs p132 5:12 \textcolour{ubdarkred}{“\ublistelem{10.}\bibnobreakspace Earned wealth --- riches derived directly from your own personal labour, the fair and just reward of your own daily efforts of mind and body.}
+\vs p132 5:3 \textcolour{ubdarkred}{\ublistelem{“1.}\bibnobreakspace Inherited wealth --- riches derived from parents and other ancestors.}
+\vs p132 5:4 \textcolour{ubdarkred}{\ublistelem{“2.}\bibnobreakspace Discovered wealth --- riches derived from the uncultivated resources of mother earth.}
+\vs p132 5:5 \textcolour{ubdarkred}{\ublistelem{“3.}\bibnobreakspace Trade wealth --- riches obtained as a fair profit in the exchange and barter of material goods.}
+\vs p132 5:6 \textcolour{ubdarkred}{\ublistelem{“4.}\bibnobreakspace Unfair wealth --- riches derived from the unfair exploitation or the enslavement of one’s fellows.}
+\vs p132 5:7 \textcolour{ubdarkred}{\ublistelem{“5.}\bibnobreakspace Interest wealth --- income derived from the fair and just earning possibilities of invested capital.}
+\vs p132 5:8 \textcolour{ubdarkred}{\ublistelem{“6.}\bibnobreakspace Genius wealth --- riches accruing from the rewards of the creative and inventive endowments of the human mind.}
+\vs p132 5:9 \textcolour{ubdarkred}{\ublistelem{“7.}\bibnobreakspace Accidental wealth --- riches derived from the generosity of one’s fellows or taking origin in the circumstances of life.}
+\vs p132 5:10 \textcolour{ubdarkred}{\ublistelem{“8.}\bibnobreakspace Stolen wealth --- riches secured by unfairness, dishonesty, theft, or fraud.}
+\vs p132 5:11 \textcolour{ubdarkred}{\ublistelem{“9.}\bibnobreakspace Trust funds --- wealth lodged in your hands by your fellows for some specific use, now or in the future.}
+\vs p132 5:12 \textcolour{ubdarkred}{\ublistelem{“10.}\bibnobreakspace Earned wealth --- riches derived directly from your own personal labour, the fair and just reward of your own daily efforts of mind and body.}
 \vs p132 5:13 \pc \textcolour{ubdarkred}{“And so, my friend, if you would be a faithful and just steward of your large fortune, before God and in service to men, you must approximately divide your wealth into these ten grand divisions, and then proceed to administer each portion in accordance with the wise and honest interpretation of the laws of justice, equity, fairness, and true efficiency; albeit, the God of heaven would not condemn you if sometimes you erred, in doubtful situations, on the side of merciful and unselfish regard for the distress of the suffering victims of the unfortunate circumstances of mortal life. When in honest doubt about the equity and justice of material situations, let your decisions favour those who are in need, favour those who suffer the misfortune of undeserved hardships.”}
 \vs p132 5:14 After discussing these matters for several hours and in response to the rich man’s request for further and more detailed instruction, Jesus went on to amplify his advice, in substance saying: \textcolour{ubdarkred}{“While I offer further suggestions concerning your attitude toward wealth, I would admonish you to receive my counsel as given only to you and for your personal guidance. I speak only for myself and to you as an inquiring friend. I adjure you not to become a dictator as to how other rich men shall regard their wealth. I would advise you:}
 \vs p132 5:15 \pc \textcolour{ubdarkred}{“\ublistelem{1.}\bibnobreakspace As steward of inherited wealth you should consider its sources. You are under moral obligation to represent the past generation in the honest transmittal of legitimate wealth to succeeding generations after subtracting a fair toll for the benefit of the present generation. But you are not obligated to perpetuate any dishonesty or injustice involved in the unfair accumulation of wealth by your ancestors. Any portion of your inherited wealth which turns out to have been derived through fraud or unfairness, you may disburse in accordance with your convictions of justice, generosity, and restitution. The remainder of your legitimate inherited wealth you may use in equity and transmit in security as the trustee of one generation for another. Wise discrimination and sound judgment should dictate your decisions regarding the bequest of riches to your successors.}
